# accountsv2

./: .editorconfig  .gitignore  accountsv2.floalz.fr.conf  docker-compose.yml
.postman/: config.json
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  run.bat
backend/adapters/features/categories/: category_dto.py  category_orm.py  category_repo.py  category_routes.py
backend/adapters/features/details/: details_dto.py  details_repo.py  details_routes.py
backend/adapters/features/summary/: summary_repo.py  summary_routes.py
backend/adapters/features/transactions/: transactions_dto.py  transactions_orm.py  transactions_repo.py  transactions_routes.py
backend/adapters/shared/: dependencies.py  lifespan.py
backend/adapters/shared/api/: router.py
backend/adapters/shared/config/: config.py
backend/adapters/shared/db/: base.py  bootstrap.py
backend/adapters/shared/utils/: conversion_utils.py  security_utils.py
backend/adapters/shared/validators/: monthly_value_dto.py  user_dto.py
backend/core/features/categories/: category.py  category_port.py  category_service.py
backend/core/features/details/: details.py  details_port.py  details_service.py
backend/core/features/summary/: summary_port.py  summary_service.py
backend/core/features/transactions/: transaction.py  transactions_port.py  transactions_service.py
backend/migrations/: env.py
backend/migrations/versions/: 1dfef1a1f877_categories.py  2f119758200b_transactions.py  5e083eecd1c8_transactions.py  6abdb9ee591e_categories.py  f13f1a46c6a1_user.py  f56f3b30b182_categories.py
(+116 files in other folders)
